--- a/test.html
+++ b/test.html
@@ -9,14 +9,29 @@
   <script type="text/javascript" src="bearworkit/js/main.js"></script>
 </head>
 <body>
-  <section class="bear-col bear-flecen bear-itecen bear-cocen bear-1of2 wrapper">
-    <p class="bear-tesan">Hello, world</p>
-    <p class="bear-tesan bear-telig">Hello, world</p>
-    <p class="bear-tesan bear-tebol">Hello, world</p>
-    <p class="bear-teser">Hello, world</p>
-    <p class="bear-tedec">Hello, world</p>
-    <p class="bear-tesla">Hello, world</p>
-    <p class="bear-temon">Hello, world</p>
-  </section>
+  <div class="bearapper">
+    <header class="bear-flecen">
+      <h1 class="bear-tedec bear-te18">H1der is that</h1>
+    </header>
+    <div class="bear-row bear-flestr bear-itestr">
+      <article class="bear-col bear-1of2 bear-itecen">
+        <h2 class="bear-tesan bear-tebol bear-te14">H2der is that</h2>
+        <p class="bear-teser bear-te bear-te6">Pi is that</p>
+        <p class="bear-teser bear-te bear-te6">Pi is that</p>
+        <p class="bear-teser bear-te bear-te6">Pi is that</p>
+        <p class="bear-teser bear-te bear-te6">Pi is that</p>
+        <p class="bear-teser bear-te bear-te6">Pi is that</p>
+        <p class="bear-teser bear-te bear-te6">Pi is that</p>
+      </article>
+      <aside class="bear-col bear-1of2 bear-itecen">
+        <header>
+          <h2 class="bear-tesan bear-tebol bear-te14">H2der is that</h2>
+        </header>
+        <section>
+          <p class="bear-teser bear-te bear-te6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis nulla porttitor, tincidunt justo sit amet, cursus lectus. Ut at imperdiet mauris. Sed id quam eu felis vestibulum semper. Cras sed risus mauris. Pellentesque ultrices placerat sem, ac blandit ante volutpat id. Morbi sit amet facilisis leo. Donec aliquet purus eu dui porta, aliquet euismod arcu viverra. Vivamus sagittis id libero sed ultrices. Vivamus lacus arcu, auctor luctus nisl a, lacinia ultrices odio. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at consequat ligula. Nullam fringilla nec magna ac vehicula. Cras convallis diam vel dignissim dapibus. Integer pharetra at sapien vel finibus. Suspendisse scelerisque diam ipsum, sed ultricies diam lacinia eget. Vivamus imperdiet aliquet lectus ut efficitur.</p>
+        </section>
+      </aside>
+    </div>
+  </div>
 </body>
 </html>
