Black text add class

--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 <body>
   <div class="bearapper">
     <header class="bear-flecen">
-      <h1 class="bear-tedec bear-te18">H1der is that</h1>
+      <h1 class="bear-tebla bear-te18">H1der is that</h1>
     </header>
     <div class="bear-row bear-flestr bear-itestr">
       <article class="bear-col bear-1of2 bear-itecen">
